# showcase

./: LICENSE  flake.nix
.github/workflows/: multi-platform.yml
internal-showcase/: .envrc  CMakeLists.txt  README.md  build.sh  mod.json
internal-showcase/src/: main.cpp  main.hpp
internal-showcase/src/hooks/: ccdirector.cpp  ccnode.cpp  ccscheduler.cpp  game_manager.cpp  gj_base_layer.cpp  play_layer.cpp
internal-showcase/src/includes/: geode.hpp
internal-showcase/src/managers/: showcase_internal_manager.cpp  showcase_internal_manager.hpp
internal-showcase/src/models/: bot.hpp
internal-showcase/src/utils/: file_ops.cpp  file_ops.hpp
server/: .gitignore  build.yaml  flake.nix  pubspec.yaml
server/lib/: player.dart  server.dart
server/lib/models/: auth.dart  database.dart  database.g.dart  requests.dart
server/lib/utils/: future_timeout.dart
server/nix/: module.nix  package.nix  vm-package.nix
showcase/: CMakeLists.txt  about.md  build.sh  changelog.md  mod.json
showcase/src/: main.cpp
showcase/src/hooks/: ccscheduler.cpp  game_manager.cpp  gj_base_layer.cpp  level_info_layer.cpp  menu_layer.cpp  play_layer.cpp
showcase/src/includes/: geode.hpp
showcase/src/managers/: showcase_auto_manager.cpp  showcase_auto_manager.hpp  showcase_manager.cpp  showcase_manager.hpp
showcase/src/models/: bot.hpp
showcase/src/utils/: file_content.cpp  file_content.hpp  get_level_by_id.cpp  get_level_by_id.hpp  string_to_int.cpp  string_to_int.hpp
